# tauri-plugin-hwinfo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json
.github/workflows/: release.yml
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_cpu_info.toml  get_gpu_info.toml  get_os_info.toml  get_ram_info.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
