[package]
name = "tauri-plugin-hwinfo"
version = "0.1.0"
edition = "2021"
authors = ["Nikola Ranđelović <contact@nikolchaa.com>"]
description = "A cross-platform Tauri plugin to fetch CPU, RAM, GPU, and OS info."
license = "MIT"
repository = "https://github.com/nikolchaa/tauri-plugin-hwinfo"
documentation = "https://github.com/nikolchaa/tauri-plugin-hwinfo"
homepage = "https://github.com/nikolchaa/tauri-plugin-hwinfo"
readme = "README.md"
keywords = ["tauri", "plugin", "hardware", "system", "diagnostics"]
categories = ["development-tools", "os", "hardware-support"]
rust-version = "1.77.2"
links = "tauri-plugin-hwinfo"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules", "/target"]

[dependencies]
tauri = { version = "2.5.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
sysinfo = "0.34.2"
os_info = "3.10.0"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
