[package]
name = "tauri-plugin-hwinfo"
version = "0.2.0"
edition = "2021"
authors = ["Nikola Ranđelović <contact@nikolchaa.com>"]
description = "A cross-platform Tauri plugin to fetch CPU, RAM, GPU, and OS info."
license = "MIT"
repository = "https://github.com/nikolchaa/tauri-plugin-hwinfo"
documentation = "https://github.com/nikolchaa/tauri-plugin-hwinfo"
homepage = "https://github.com/nikolchaa/tauri-plugin-hwinfo"
readme = "README.md"
keywords = ["tauri", "plugin", "hardware", "system", "diagnostics"]
categories = ["development-tools", "os", "hardware-support"]
rust-version = "1.77.2"
links = "tauri-plugin-hwinfo"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules", "/target", "/.github"]

[dependencies]
tauri = { version = "2.5.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
sysinfo = "0.34.2"
os_info = "3.10.0"
windows = { version = "0.54", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D11",
  "Win32_System_SystemServices",
  "Win32_Foundation",
] }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
